founders-slider: updates to the slider and added js to solve white space when no text content

--- a/content-types/founders-slider/css/main.css
+++ b/content-types/founders-slider/css/main.css
@@ -10,12 +10,12 @@ body {
 }
 
 /* MAIN CSS */
-.slider-wrapper {
+.founders-slider .slider-wrapper {
   position: relative;
   overflow: hidden;
 }
 
-.slides-container {
+.founders-slider .slides-container {
   display: flex;
   overflow: hidden;
   scroll-snap-type: x mandatory;
@@ -23,7 +23,11 @@ body {
   height: 100%;
 }
 
-.slide-arrow {
+.founders-slider .slide .row {
+  height: 100%;
+}
+
+.founders-slider .slide-arrow {
   position: absolute;
   display: flex;
   top: 0;
@@ -42,54 +46,50 @@ body {
   z-index: 1;
 }
 
-.slide-arrow:hover,
-.slide-arrow:focus {
+.founders-slider .slide-arrow:hover,
+.founders-slider .slide-arrow:focus {
   opacity: 1;
 }
 
-.slide-arrow.prev {
+.founders-slider .slide-arrow.prev {
   left: 0;
-  padding-top: .50rem;
-  padding-left: 0.50rem;
+  padding-top: 0.5rem;
+  padding-left: 0.5rem;
   border-radius: 0 5rem 5rem 0 !important;
 }
 
-.slide-arrow.next {
+.founders-slider .slide-arrow.next {
   right: 0;
-  padding-top: .50rem;
+  padding-top: 0.5rem;
   padding-left: 1.25rem;
   border-radius: 5rem 0 0 5rem !important;
 }
 
-.slides-container {
+.founders-slider .slides-container {
   padding: 0 !important;
   margin: 0 !important;
 }
 
-.slide {
+.founders-slider .slide {
   flex: 1 0 100%;
   scroll-snap-align: center;
 }
 
-/* .slide .col-lg-12 { 
-  overflow: hidden;
-  height: 70%;
-} */
-
-.slide img {
+.founders-slider .slide img {
   width: 100%;
   object-fit: cover;
   aspect-ratio: 16/9;
+  height: auto;
 }
 
-/* Slide Indicator */
-.slider-indicators {
+/* SLIDE INDICATORS */
+.founders-slider .slider-indicators {
   display: flex;
   justify-content: center;
   margin: 1rem 0;
 }
 
-.slider-indicator {
+.founders-slider .slider-indicator {
   width: 10px;
   height: 10px;
   border-radius: 50%;
@@ -99,8 +99,37 @@ body {
   transition: background-color 0.3s;
 }
 
-.slider-indicator.active {
+.founders-slider .slider-indicator.active {
   background-color: #900028; /* Active indicator color */
+}
+
+/* FOUNDERS CONTENT SECTION */
+
+.founders-slider .slide .content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  min-height: 75px;
+  background: #900028;
+  padding: 5px 15px;
+}
+
+.founders-slider .slide .content .title span {
+  font-weight: 600;
+  font-size: 0.75rem;
+  line-height: 1.4;
+  letter-spacing: 0.07rem;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.founders-slider .slide .content .description p {
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 1.4;
+  letter-spacing: 0.07rem;
+  color: #fff;
 }
 
 /* TEST QUOTE SLIDER */
